First commit - update cv data
Includes additional info section + add technologies info in career profile item+ change color + add css

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
 
     {% if sidebar.email %}
     <li class="email"><i class="fas fa-envelope"></i>
-      <a href="mailto:{{ sidebar.email }}">{{ sidebar.email }}</a>
+      <a href="mailto:{{ sidebar.email }}">{{ sidebar.email}}</a>
     </li>
     {% endif %}
 
@@ -112,7 +112,7 @@
 
     {% if sidebar.pdf %}
     <li class="pdf"><i class="fas fa-file-pdf"></i>
-      <a href="{{ sidebar.pdf }}" target="_blank">Resume PDF</a>
+      <button class="print-button-like-anchor" onclick="{window.print()}">PDF</button>
     </li>
     {% endif %}
 
