--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,9 +25,6 @@
 
   {% include language.html %}
   {% include interests.html %}
-
-  {% if sidebar.about %}
-    {% include about.html %}
-  {% endif %}
+  {% include additional-info.html %}
 
 </div><!--//sidebar-wrapper-->
