--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,6 +19,12 @@
     </li>
     {% endif %}
 
+    {% if sidebar.location %}
+    <li class="location"><i class="fas fa-earth-europe"></i>
+      <a href=""> {{ sidebar.location }}</a>
+    </li>
+    {% endif %}
+
     {% if sidebar.timezone %}
     <li class="timezone"><i class="fas fa-clock"></i>
       <a href="https://worldtimeapi.org/timezone/{{ sidebar.timezone }}" target="_blank">{{ sidebar.timezone }} Timezone</a>
